[gd_scene load_steps=11 format=3 uid="uid://c3y717dw0qjcl"]

[ext_resource type="Script" path="res://Assets/Modules/UI/Panels/UIConnectPanel.gd" id="1_if378"]
[ext_resource type="Theme" uid="uid://b7w2njqwy08yh" path="res://Assets/Modules/UI/Themes/ingame_menu_theme.tres" id="2_frwlb"]
[ext_resource type="Theme" uid="uid://dsklx8m7o8m0o" path="res://Assets/Modules/UI/Themes/title_screen_theme.tres" id="3_l7t8h"]
[ext_resource type="Texture2D" uid="uid://bnbrm21gqbq55" path="res://Assets/Textures/UI/close_button.png" id="3_s84lx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ix75g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nhg3m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wcrqa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m0w2g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fh1ir"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x6qao"]

[node name="UIConnectPanel" type="CanvasLayer" node_paths=PackedStringArray("ConnectButton", "OfflineButton")]
process_mode = 3
layer = 12
script = ExtResource("1_if378")
ConnectButton = NodePath("ExitMenuContainer/ConnectButton")
OfflineButton = NodePath("ExitMenuContainer/OfflineButton")

[node name="Blur" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.752941)

[node name="ExitMenuContainer" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -236.0
offset_right = 424.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_frwlb")

[node name="Title" type="Label" parent="ExitMenuContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -840.0
offset_top = 64.0
offset_right = -104.0
offset_bottom = 136.0
grow_horizontal = 0
theme = ExtResource("2_frwlb")
text = "Enter host url:"
horizontal_alignment = 1

[node name="ConnectButton" type="Button" parent="ExitMenuContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.0
offset_top = -104.0
offset_right = -36.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_frwlb")
text = "Connect"

[node name="OfflineButton" type="Button" parent="ExitMenuContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -104.0
offset_right = 324.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_frwlb")
text = "Run Offline"

[node name="CloseButton" type="Button" parent="ExitMenuContainer"]
layout_mode = 0
offset_left = 856.0
offset_top = 24.0
offset_right = 908.0
offset_bottom = 80.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ix75g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nhg3m")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wcrqa")
theme_override_styles/hover = SubResource("StyleBoxEmpty_m0w2g")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fh1ir")
theme_override_styles/normal = SubResource("StyleBoxEmpty_x6qao")
icon = ExtResource("3_s84lx")
icon_alignment = 1

[node name="HostLineEdit" type="LineEdit" parent="ExitMenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -32.0
offset_right = 340.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l7t8h")
placeholder_text = "ws://localhost:8000"
alignment = 1
